<resources>
    <!--Login activity-->
    <string name="appName">SparklingClean</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="forgotPW">Forgot password or username</string>

    <!--Register1 Activity-->
    <!--Labels-->
    <string name="registerUsername">Username:</string>
    <string name="registerPassword">Password:</string>
    <string name="confirmPassword">Confirm Password:</string>

    <!--Hints-->
    <string name="confirmPasswordHint">Confirm password</string>

    <!--Buttons-->
    <string name="returnBtn">Return</string>
    <string name="nextBtn">Next</string>

    <!--Register2 Activity-->
    <!--Labels-->
    <string name="registerFN">First name:</string>
    <string name="registerLN">Last name:</string>
    <string name="registerEmail">Email:</string>
    <string name="registerDoB">Date of birth:</string>
    <string name="registerAddress">Address:</string>
    <string name="registerPhoneNum">Telephone number:</string>

    <!--Hints-->
    <string name="fnHint">First name</string>
    <string name="lNHint">Last name</string>
    <string name="emailHint">Email</string>
    <string name="doBHint">Date of birth</string>
    <string name="addressHint">Address</string>
    <string name="phoneNumHint">Telephone number</string>

    <!--Buttons-->
    <string name="finishBtn">Finish</string>

    <string name="title_activity_firebase">FirebaseActivity</string>
    <string name="writeBtn">Write</string>
    <string name="readBtn">Read</string>
    <string name="dummy_content">Firebase Database Test Screen</string>

    <!--Manager Landing Activity-->
    <string name="Employees">Employees</string>
    <string name="Clients">Clients</string>
    <string name="Appointments">Appointments</string>
    <string name="Settings">Settings</string>

    <!--Client Landing Activity-->
    <string name="Profile">Profile</string>

</resources>
