<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context=".Login.LoginActivity">

    <EditText
        android:id="@+id/usernameTxt"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passowrdTxt"
        android:layout_below="@+id/usernameTxt"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_below="@+id/passowrdTxt"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/appointments_button"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/appointments_button"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/register"
        android:textColor="#FFFFFF" />
</RelativeLayout>