<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#74B3CE"
    android:orientation="vertical">

    <Button
        android:id="@+id/appointmentsBtn"
        android:layout_width="322dp"
        android:layout_height="87dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/appointments_button"
        android:drawableStart="@drawable/ic_web_black_24dp"
        android:gravity="center"
        android:text="@string/Appointments" />


    <Button
        android:id="@+id/clientsBtn"
        android:layout_below="@+id/appointmentsBtn"
        android:layout_centerHorizontal="true"
        android:layout_width="322dp"
        android:layout_height="87dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/clients_button"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:gravity="center"
        android:text="@string/Profile" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_below="@+id/clientsBtn"
        android:layout_centerHorizontal="true"
        android:layout_width="322dp"
        android:layout_height="87dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/settings_button"
        android:drawableStart="@drawable/ic_build_black_24dp"
        android:text="@string/Settings" />

</RelativeLayout>