<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".Firebase.DB.FirebaseActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="686dp">

            <TextView
                android:id="@+id/outputLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="420dp"
                android:text="Output : "
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/contentTxt"
                    android:layout_width="274dp"
                    android:layout_height="51dp"
                    android:background="?android:attr/colorBackground"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/referenceTxt"
                    app:layout_constraintTop_toBottomOf="@+id/readBtn" />

                <Button
                    android:id="@+id/readBtn"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="278dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:text="@string/readBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/writeBtn"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/referenceTxt"
                    android:layout_width="131dp"
                    android:layout_height="53dp"
                    android:layout_weight="1"
                    android:background="?android:attr/colorLongPressedHighlight"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Ref"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/writeBtn" />

                <Button
                    android:id="@+id/writeBtn"
                    android:layout_width="134dp"
                    android:layout_height="53dp"
                    android:text="@string/writeBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>